bugfix, static final consistency, virtual threads, comments